irc/soju.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: soju
 namespace: irc
 labels:
  app: soju
spec:
 replicas: 1
 strategy:
  type: Recreate
 selector:
  matchLabels:
   app: soju
 template:
  metadata:
   labels:
    app: soju
  spec:
   securityContext:
    fsGroup: 1000
   containers:
    - name: soju
      image: codeberg.org/emersion/soju:latest
      args: ['-config', '/etc/soju/config']
      securityContext:
       runAsUser: 1000
       runAsGroup: 1000
       allowPrivilegeEscalation: false
      ports:
       - name: irc
         containerPort: 6667
       - name: ident
         containerPort: 113
      volumeMounts:
       - name: irc
         mountPath: /var/lib/soju
       - name: soju
         mountPath: /etc/soju
      readinessProbe:
       tcpSocket:
        port: 6667
       initialDelaySeconds: 5
       periodSeconds: 10
      livenessProbe:
       tcpSocket:
        port: 6667
       initialDelaySeconds: 15
       periodSeconds: 20
   volumes:
    - name: irc
      persistentVolumeClaim:
       claimName: irc
    - name: soju
      configMap:
       name: soju
