irc/lounge.service.yml
apiVersion: v1
kind: Service
metadata:
 name: lounge
 namespace: irc
 annotations:
  tailscale.com/hostname: 'lounge'
  tailscale.com/expose: 'true'
spec:
 selector:
  app: lounge
 ports:
  - name: https
    port: 443
    targetPort: 443
