irc/soju.service.yml
apiVersion: v1
kind: Service
metadata:
 name: soju
 namespace: irc
 annotations:
  tailscale.com/hostname: 'soju'
  tailscale.com/expose: 'true'
spec:
 selector:
  app: soju

 ports:
  - name: irc
    port: 6667
    targetPort: 6667
  - name: irc-tls
    port: 6697
    targetPort: 6697
  - name: ident
    port: 113
    targetPort: 113
 type: ClusterIP
